-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
4a8bb7ddb (18.0)
Precondition:
- Docker device with wrong setting for "Paths to mount" (side note: that is the default when installing Boot2Qt on macOS, which is a separate issue)
- Kit with that Docker device as the build device (like the Boot2Qt setup on macOS)
Open a project with the intention of configuring for the above kit.
In Qt Creator 17, the target setup page shows the kit, with expandable details, and in the details the error is shown that the build device cannot reach the project directory for each of the build types. It is a bit repetitive, but at least the error is shown, which is basically saying "the way things are configured, this project actually will not work with this kit". Anyway, the kit is selectable, and it is possible to "configure" the project for the kit, even though the actual project configuration then fails.
In Qt Creator 18, the target setup page shows the kit, and it is selectable, but the details button is disabled. No error is shown. The tool tip on the kit only shows a warning that no run device is set for the kit. When clicking "Configure" with the kit selected, Qt Creator crashes.
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libProjectExplorer.dylib 0x1301112f0 ProjectExplorer::BuildConfiguration::deployConfigurationModel() const + 12 (buildconfiguration.cpp:920) 1 libProjectExplorer.dylib 0x1309acf20 ProjectExplorer::Internal::DeploySettingsWidget::initForActiveBuildConfig() + 116 (runsettingspropertiespage.cpp:415) 2 libProjectExplorer.dylib 0x1309ac99c ProjectExplorer::Internal::DeploySettingsWidget::DeploySettingsWidget(ProjectExplorer::Target*) + 1760 (runsettingspropertiespage.cpp:310) 3 libProjectExplorer.dylib 0x1309adf10 ProjectExplorer::Internal::DeploySettingsWidget::DeploySettingsWidget(ProjectExplorer::Target*) + 36 (runsettingspropertiespage.cpp:275) 4 libProjectExplorer.dylib 0x1309b295c ProjectExplorer::Internal::createDeploySettingsWidget(ProjectExplorer::Target*) + 36 (runsettingspropertiespage.cpp:900) 5 libProjectExplorer.dylib 0x1308d7b40 ProjectExplorer::Internal::TargetItem::panelWidgets() const + 240 (projectwindow.cpp:908) 6 libProjectExplorer.dylib 0x1308ee49c ProjectExplorer::Internal::ProjectWindowPrivate::updatePanel() + 192 (projectwindow.cpp:1556) 7 libProjectExplorer.dylib 0x1308ee3d0 ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()::operator()() const + 28 (projectwindow.cpp:1571) 8 libProjectExplorer.dylib 0x1308ee3a8 decltype(std::declval<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()&>()()) std::__1::__invoke[abi:ne190102]<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()&>(ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()&) + 24 (invoke.h:149) 9 libProjectExplorer.dylib 0x1308ee360 void std::__1::__invoke_void_return_wrapper<void, true>::__call[abi:ne190102]<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()&>(ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()&) + 24 (invoke.h:224) 10 libProjectExplorer.dylib 0x1308ee33c std::__1::__function::__alloc_func<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'(), std::__1::allocator<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()>, void ()>::operator()[abi:ne190102]() + 28 (function.h:171) 11 libProjectExplorer.dylib 0x1308ed1dc std::__1::__function::__func<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'(), std::__1::allocator<ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::'lambda'()>, void ()>::operator()() + 28 (function.h:313) 12 libProjectExplorer.dylib 0x1300f1dfc std::__1::__function::__value_func<void ()>::operator()[abi:ne190102]() const + 60 (function.h:430) 13 libProjectExplorer.dylib 0x1300f1d6c std::__1::function<void ()>::operator()() const + 24 (function.h:989) 14 libProjectExplorer.dylib 0x1308f0254 ProjectExplorer::Internal::ProjectItem::announceChange() + 28 (projectwindow.cpp:690) 15 libProjectExplorer.dylib 0x1308f0534 ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()::operator()() const + 28 (projectwindow.cpp:623) 16 libProjectExplorer.dylib 0x1308f050c QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()>::call(ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()&, void**)::'lambda'()::operator()() const + 28 (qobjectdefs_impl.h:116) 17 libProjectExplorer.dylib 0x1308f04e4 void QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()>::call(ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()&, void**)::'lambda'()>(void**, QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()>::call(ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()&, void**)::'lambda'()&&) + 28 (qobjectdefs_impl.h:65) 18 libProjectExplorer.dylib 0x1308f04bc QtPrivate::FunctorCall<std::__1::integer_sequence<unsigned long>, QtPrivate::List<>, void, ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()>::call(ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()&, void**) + 40 (qobjectdefs_impl.h:115) 19 libProjectExplorer.dylib 0x1308f0448 void QtPrivate::FunctorCallable<ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()>::call<QtPrivate::List<>, void>(ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'()&, void*, void**) + 36 (qobjectdefs_impl.h:337) 20 libProjectExplorer.dylib 0x1308f03e0 QtPrivate::QCallableObject<ProjectExplorer::Internal::ProjectItem::ProjectItem(ProjectExplorer::Project*, std::__1::function<void ()> const&)::'lambda1'(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobjectdefs_impl.h:547) 21 QtCore 0x1051061b4 0x10501c000 + 958900 22 libProjectExplorer.dylib 0x130017f74 void QMetaObject::activate<void, ProjectExplorer::Target*>(QObject*, QMetaObject const*, int, void*, ProjectExplorer::Target* const&) + 84 (qobjectdefs.h:306) 23 libProjectExplorer.dylib 0x1300175a4 ProjectExplorer::Project::activeTargetChanged(ProjectExplorer::Target*) + 48 (moc_project.cpp:281) 24 libProjectExplorer.dylib 0x13069a470 ProjectExplorer::Project::setActiveTargetHelper(ProjectExplorer::Target*) + 160 (project.cpp:486) 25 libProjectExplorer.dylib 0x130699f88 ProjectExplorer::Project::setActiveTarget(ProjectExplorer::Target*, ProjectExplorer::SetActive) + 60 (project.cpp:579) 26 libProjectExplorer.dylib 0x130699d94 ProjectExplorer::Project::addTarget(std::__1::unique_ptr<ProjectExplorer::Target, std::__1::default_delete<ProjectExplorer::Target>>&&) + 316 (project.cpp:423) 27 libProjectExplorer.dylib 0x1306a15a8 ProjectExplorer::Project::setup(ProjectExplorer::BuildInfo const&) + 376 (project.cpp:1295) 28 libProjectExplorer.dylib 0x1306a1414 ProjectExplorer::Project::setup(QList<ProjectExplorer::BuildInfo> const&) + 120 (project.cpp:1271) 29 libProjectExplorer.dylib 0x1309f7f0c ProjectExplorer::TargetSetupPage::setupProject(ProjectExplorer::Project*) + 360 (targetsetuppage.cpp:689) 30 libProjectExplorer.dylib 0x1308d3924 ProjectExplorer::Internal::TargetSetupPageWrapper::done() + 140 (projectwindow.cpp:751) ...