ProjectExplorer: Take build device into account

... when checking whether a kit is suitable for a project.

Fixes: QTCREATORBUG-33327
Change-Id: I0b411c07dbaec8487a685936b91edae938cf8778
Reviewed-by: Eike Ziller <eike.ziller@qt.io>